Fixed issues, moved textures from "other" type to "entity" type